test_data_shell/long_test/config/fortio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fortio-server
  name: fortio-server
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: fortio-server
